--- a/configure.in
+++ b/configure.in
@@ -51,6 +51,13 @@ AC_ARG_ENABLE(mysql, [  --disable-mysql     Disable mysql inserts.],
                 fi
         ])
 
+AC_ARG_ENABLE(glib, [  --disable-glib     Disable plugins/utilities using glib.],
+        [       if test x$enableval = xno ; then
+                        disable_glib=yes
+                        echo The sedc sampler and hwloc utilities have been disabled.
+                fi
+        ])
+
 dnl Checks for programs
 AC_PROG_CC
 AC_PROG_CXX
@@ -62,10 +69,6 @@ AC_C_CONST
 dnl Check for libevent
 AC_CHECK_LIB(event, event_base_new, [], 
     AC_MSG_ERROR([event_base_new() not found.  ldms-utils requires libevent.]))
-
-dnl Check for glib
-AC_CHECK_LIB(glib, g_list_alloc, [], 
-    AC_MSG_ERROR([g_list_alloc() not found.  ldms-utils glib.]))
 
 dnl Check for pthread support
 AC_CHECK_LIB(pthread, pthread_mutex_init, [],
@@ -112,6 +115,7 @@ AM_CONDITIONAL([ENABLE_SOCK], [test "$disable_sock" != "yes"])
 AM_CONDITIONAL([ENABLE_MMAP], [test "$disable_mmap" != "yes"])
 AM_CONDITIONAL([ENABLE_PERF], [test "$disable_perf" != "yes"])
 AM_CONDITIONAL([ENABLE_MYSQL], [test "$disable_mysql" != "yes"])
+AM_CONDITIONAL([ENABLE_GLIB], [test "$disable_glib" != "yes"])
 AM_CONDITIONAL([HAVE_LD_VERSION_SCRIPT], [test "$ac_cv_version_script" = "yes"])
 AC_CONFIG_FILES([Makefile ldms-utils.spec])
 AC_OUTPUT
