Add support for the Gemini transport and the SOS object store
Signed-off-by: Tom Tucker <tom@ogc.us>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,25 +1,19 @@
-
 ACLOCAL_AMFLAGS = -I m4
 
 INCLUDES = -I$(top_builddir)/include/ -I$(srcdir)/include -I$(includedir)
 
 if ENABLE_GLIB
-sbin_PROGRAMS = src/ldmsd src/ldms_ls src/ldmsctl src/hwlocldms_ls 
+sbin_PROGRAMS = src/ldmsd src/ldms_ls src/ldmsctl src/hwlocldms_ls
 else
-sbin_PROGRAMS = src/ldmsd src/ldms_ls src/ldmsctl 
+sbin_PROGRAMS = src/ldmsd src/ldms_ls src/ldmsctl
 endif
-
-noinst_LIBRARIES = libun.a
-
-libun_a_SOURCES = src/libun.c
-libun_a_DEPENDENCIES = src/un.h
 
 if ENABLE_RDMA
 src_libldmsrdma_la_SOURCES = src/ldms_rdma.c
 src_libldmsrdma_la_LIBADD = -libverbs -lrdmacm
 src_libldmsrdma_la_DEPENDENCIES = $(srcdir)/src/libldmsrdma.map
+src_libldmsrdma_la_CFLAGS = -Iinfiniband
 RDMA_la = src/libldmsrdma.la
-INCLUDES += -Iinfiniband 
 else
 RDMA_FLAGS = -DDISABLE_RDMA
 endif
@@ -36,6 +30,18 @@ else
 SOCK_FLAGS = -DDISABLE_SOCK
 endif
 
+if ENABLE_UGNI
+PMI_CFLAGS = $(shell pkg-config --cflags cray-pmi)
+PMI_LIBS = $(shell pkg-config --libs cray-pmi)
+UGNI_CFLAGS = $(shell pkg-config --cflags cray-ugni)
+UGNI_LIBS = $(shell pkg-config --libs cray-ugni)
+src_libldmsugni_la_CFLAGS = $(PMI_CFLAGS) $(UGNI_CFLAGS)
+src_libldmsugni_la_LDFLAGS = $(PMI_LIBS) $(UGNI_LIBS)
+src_libldmsugni_la_SOURCES = src/ldms_ugni.c
+src_libldmsugni_la_DEPENDENCIES = $(srcdir)/src/libldmsugni.map
+UGNI_la = src/libldmsugni.la
+endif
+
 src_libflatfile_la_SOURCES = src/flatfile.c
 src_libflatfile_la_DEPENDENCIES = $(srcdir)/src/libflatfile.map
 src_libflatfile_la_LIBADD = $(top_builddir)/src/libldms.la -L$(top_builddir)
@@ -47,31 +53,43 @@ FLATFILE_la = src/libflatfile.la
 #HWLOCFLATFILE_la = src/libhwlocflatfile.la
 
 if ENABLE_MYSQL
-src_libmysqlinsert_la_CPPFLAGS = -I/usr/include/mysql 
+src_libmysqlinsert_la_CPPFLAGS = -I/usr/include/mysql
 src_libmysqlinsert_la_SOURCES = src/mysqlinsert.c
 src_libmysqlinsert_la_DEPENDENCIES = $(srcdir)/src/libmysqlinsert.map
-src_libmysqlinsert_la_LIBADD = $(top_builddir)/src/libldms.la -L$(top_builddir) -L/usr/lib64/mysql -lmysqlclient 
+src_libmysqlinsert_la_LIBADD = $(top_builddir)/src/libldms.la -L$(top_builddir) -L/usr/lib64/mysql -lmysqlclient
 MYSQLINSERT_la = src/libmysqlinsert.la
 else
 MYSQL_FLAGS = -DDISABLE_MYSQL
 endif
 
 if ENABLE_GLIB
-INCLUDES += -I/usr/include/glib-2.0
 src_libsedc_la_SOURCES = src/sedc.c
 src_libsedc_la_DEPENDENCIES = $(srcdir)/src/libsedc.map
-src_libsedc_la_LIBADD = $(top_builddir)/src/libldms.la -L$(top_builddir) -L/usr/lib64/glib-2.0/lib -lglib-2.0
-SEDC_la = src/libsedc.la 
+src_libsedc_la_LIBADD = $(top_builddir)/src/libldms.la -L$(top_builddir) \
+	$(GLIB20_LIBS)
+src_libsedc_la_CFLAGS = $(GLIB20_CFLAGS)
+SEDC_la = src/libsedc.la
 
 src_libmetricmap_la_SOURCES = src/metricmap.c src/metricmap.h
-src_libmetricmap_la_LIBADD = -ldl -lpthread -levent -levent_pthreads
+src_libmetricmap_la_LIBADD = -ldl -lpthread -levent -levent_pthreads $(GLIB20_LIBS)
 src_libmetricmap_la_DEPENDENCIES = $(srcdir)/src/libmetricmap.map
+src_libmetricmap_la_CFLAGS = $(GLIB20_CFLAGS)
 
 src_hwlocldms_ls_SOURCES = src/hwlocldms_ls.c
-src_hwlocldms_ls_LDADD = $(top_builddir)/src/libldms.la $(top_builddir)/src/libmetricmap.la -L/usr/lib64/glib-2.0/lib -lglib-2.0
+src_hwlocldms_ls_LDADD = $(top_builddir)/src/libldms.la \
+	$(top_builddir)/src/libmetricmap.la \
+	$(GLIB20_LIBS)
+src_hwlocldms_ls_CFLAGS = $(GLIB20_CFLAGS)
 
 else
 GLIB_FLAGS = -DISABLE_GLIB
+endif
+
+if ENABLE_SOS
+src_libstore_sos_la_SOURCES = src/store_sos.c
+src_libstore_sos_la_DEPENDENCIES = $(srcdir)/src/libstore_sos.map
+src_libstore_sos_la_LIBADD = $(top_builddir)/src/libldms.la -L$(top_builddir) -lsos -lplugin
+STORE_SOS_la = src/libstore_sos.la
 endif
 
 src_libgeminfo_la_SOURCES = src/geminfo.c
@@ -85,8 +103,9 @@ src_liblmsensors_la_LIBADD = $(top_builddir)/src/libldms.la -L$(top_builddir)
 LMSENSORS_la = src/liblmsensors.la
 
 src_libmeminfo_la_SOURCES = src/meminfo.c
-src_libmeminfo_la_DEPENDENCIES = $(srcdir)/src/libmeminfo.map
-src_libmeminfo_la_LIBADD = $(top_builddir)/src/libldms.la -L$(top_builddir)
+src_libmeminfo_la_DEPENDENCIES = $(srcdir)/src/libmeminfo.map $(top_builddir)/libplugin.a
+src_libmeminfo_la_LIBADD = $(top_builddir)/src/libldms.la -L$(top_builddir) -lplugin
+
 MEMINFO_la = src/libmeminfo.la
 
 src_libprocinterrupts_la_SOURCES = src/procinterrupts.c
@@ -94,14 +113,14 @@ src_libprocinterrupts_la_DEPENDENCIES = $(srcdir)/src/libprocinterrupts.map
 src_libprocinterrupts_la_LIBADD = $(top_builddir)/src/libldms.la -L$(top_builddir)
 PROCINTERRUPTS_la = src/libprocinterrupts.la
 
-src_libprocstatutil_la_SOURCES = src/procstatutil.c
+src_libprocstatutil_la_SOURCES = src/procstatutil.c $(top_builddir)/libplugin.a
 src_libprocstatutil_la_DEPENDENCIES = $(srcdir)/src/libprocstatutil.map
-src_libprocstatutil_la_LIBADD = $(top_builddir)/src/libldms.la -L$(top_builddir)
+src_libprocstatutil_la_LIBADD = $(top_builddir)/src/libldms.la -L$(top_builddir) -lplugin
 PROCSTATUTIL_la = src/libprocstatutil.la
 
 src_libvmstat_la_SOURCES = src/vmstat.c
-src_libvmstat_la_DEPENDENCIES = $(srcdir)/src/libvmstat.map
-src_libvmstat_la_LIBADD = $(top_builddir)/src/libldms.la -L$(top_builddir)
+src_libvmstat_la_DEPENDENCIES = $(srcdir)/src/libvmstat.map $(top_builddir)/libplugin.a
+src_libvmstat_la_LIBADD = $(top_builddir)/src/libldms.la -L$(top_builddir) -lplugin
 VMSTAT_la = src/libvmstat.la
 
 if ENABLE_PERF
@@ -111,12 +130,15 @@ src_libperfevent_la_LIBADD = $(top_builddir)/src/libldms.la -L$(top_builddir)  -
 PERFEVENT_la = src/libperfevent.la
 endif
 
-AM_CFLAGS = -Wall $(DBGFLAGS) $(SOCK_FLAGS) $(RDMA_FLAGS) $(MMAP_FLAGS) $(MYSQL_FLAGS) $(GLIB_FLAGS) $(LOCAL_FLAGS) ${SPINLOCK_FLAGS}
+AM_CFLAGS = -Wall $(DBGFLAGS) $(SOCK_FLAGS) $(RDMA_FLAGS) $(MMAP_FLAGS) \
+	$(MYSQL_FLAGS) $(GLIB_FLAGS) $(LOCAL_FLAGS) ${SPINLOCK_FLAGS}
 
 lib_LTLIBRARIES = src/libldms.la $(SOCK_la) src/libmetricmap.la \
-	$(RDMA_la) $(FLATFILE_la) $(MYSQLINSERT_la) $(LMSENSORS_la) $(MEMINFO_la) $(GEMINFO_la) $(PROCINTERRUPTS_la) \
-	$(VMSTAT_la) $(PROCSTATUTIL_la) $(PERFEVENT_la) $(SEDC_la)
-#$(HWLOCFLATFILE_la) 
+	$(UGNI_la) $(RDMA_la) $(FLATFILE_la) $(MYSQLINSERT_la) $(LMSENSORS_la) \
+	$(MEMINFO_la) $(GEMINFO_la) $(PROCINTERRUPTS_la) \
+	$(VMSTAT_la) $(PROCSTATUTIL_la) $(PERFEVENT_la) $(SEDC_la) \
+	$(STORE_SOS_la)
+#$(HWLOCFLATFILE_la)
 
 
 src_libldms_la_SOURCES = src/ldms.c src/ldms_sock.c src/ldms_xprt.c \
@@ -124,22 +146,28 @@ src_libldms_la_SOURCES = src/ldms.c src/ldms_sock.c src/ldms_xprt.c \
 src_libldms_la_LIBADD = -ldl -lpthread -levent -levent_pthreads
 src_libldms_la_DEPENDENCIES = $(srcdir)/src/libldms.map
 
-
 libldmsincludedir = $(includedir)/ldms
 libldmsinclude_HEADERS = src/ldms.h src/ldms_sock_xprt.h \
-                         src/ldms_xprt.h \
-                         src/ogc_rbt.h 
+			 src/ldms_xprt.h \
+			 src/ogc_rbt.h
+
+noinst_LIBRARIES = libplugin.a
+libplugin_a_CFLAGS = -fPIC
+libplugin_a_SOURCES = src/ldmsd_ctrl.c
+libplugin_a_DEPENDENCIES = src/ldmsd.h
 
 src_ldms_ls_SOURCES = src/ldms_ls.c
 src_ldms_ls_LDADD = $(top_builddir)/src/libldms.la
 
-src_ldmsd_SOURCES = src/ldmsd.c src/ldmsd_cfg.c
-src_ldmsd_LDADD = $(top_builddir)/src/libldms.la -L$(top_builddir) -lun -levent
-src_ldmsd_DEPENDENCIES = $(top_builddir)/libun.a
+src_ldmsd_SOURCES = src/ldmsd.c src/ldmsd_store.c
+src_ldmsd_LDADD = $(top_builddir)/src/libldms.la -L$(top_builddir) \
+	-levent -lplugin
+src_ldmsd_DEPENDENCIES = $(top_builddir)/libplugin.a
 
 src_ldmsctl_SOURCES = src/ldmsctl.c
-src_ldmsctl_LDFLAGS = $(top_builddir)/src/libldms.la -L$(top_builddir) -lun -lreadline -ltermcap
-src_ldmsctl_DEPENDENCIES = $(top_builddir)/libun.a
+src_ldmsctl_LDFLAGS = $(top_builddir)/src/libldms.la -L$(top_builddir) \
+	-lplugin -lreadline -ltermcap
+src_ldmsctl_DEPENDENCIES = $(top_builddir)/libplugin.a
 
 EXTRA_DIST = include ldms-utils.spec.in ldms-utils.spec \
 	autogen.sh \
@@ -155,4 +183,3 @@ install-data-hook:
 #	cp $(top_builddir)/scripts/schedstatd /etc/init.d/schedstatd
 #	cp $(top_builddir)/scripts/meminfod /etc/init.d/meminfod
 #	cp $(top_builddir)/scripts/procstatutild /etc/init.d/procstatutild
-
